# bouncer

./: Cargo.toml  default.nix  flake.nix
.github/workflows/: check.yml  update-clearurls-data.yml
etc/: bouncer.desktop
resources/: config.toml
src/: app.rs  backend.rs  config.rs  main.rs  message.rs  module.rs
src/backend/: gui.rs  tui.rs
src/module/: http_to_https.rs  mod.rs  regex_replacer.rs  unshorten.rs
src/module/tracking_cleaner/: mod.rs
