[package]
name = "bouncer"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
default = ["tui"]
tui = ["dep:crossterm", "dep:ratatui", "dep:tui-input"]
gui = ["dep:eframe"]

[dependencies]
crossterm = { version = "0.28", optional = true }
ratatui = { version = "0.29", optional = true }
tui-input = { version = "0.11", optional = true }
eframe = { version = "0.31", optional = true }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
freedesktop-desktop-entry = "0.8"
