[package]
name = "bouncer"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
eframe = "0.31"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
freedesktop-desktop-entry = "0.8"
arboard = "3"
url = "2"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
toml = "1.0.6"
